feat: register and login

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -17,11 +17,11 @@
           </div>
         </div>
         <div class="hidden space-x-10 lg:flex lg:ml-10">
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Work</a>
+          <a href="{% url 'accounts:login' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Login</a>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Services</a>
+          <a href="{% url 'accounts:register' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Register</a>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">About</a>
+          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Profile</a>
 
           <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Blog</a>
         </div>
