--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,23 +1,16 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 {% block title %}
-    Social Membership - Service Portal
+    Social Membership - Profile
 {% endblock %}
 
 {% block content %}
     <div class="relative bg-gray-50">
   <main class="lg:relative">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="bg-red-100 text-center border px-4 py-3 rounded relative" role="alert">
-                <span class="block sm:inline">{{ message }}</span>
-            </div>
-        {% endfor %}
-    {% endif %}
     <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-48 lg:text-left">
       <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
         <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
-          <span class="block xl:inline">Social -</span>
+          <span class="block xl:inline">Profile-</span>
           <span class="block text-indigo-600 xl:inline">Membership</span>
         </h1>
       </div>
