--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -31,8 +31,7 @@ Social Membership - Login
                             Let's work together
                         </h2>
                         <p class="mt-4 text-lg text-gray-500 sm:mt-3">
-                            We’d love to hear from you! Send us a message using the form opposite, or email us. We’d
-                            love to hear from you! Send us a message using the form opposite, or email us.
+                            Please login to access your dashboard.
                         </p>
                         <form action="" method="POST" class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
                             {% csrf_token %}
@@ -53,7 +52,7 @@ Social Membership - Login
                             
                             <div class="text-right sm:col-span-2">
                                 <button type="submit"
-                                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md bg-grape-600 hover:bg-grape-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-grape-500">
+                                    class="inline-flex justify-center py-2 px-4 shadow-lg text-lg bg-orange-800 text-white rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-grape-500">
                                     Submit
                                 </button>
                             </div>
