--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -30,14 +30,12 @@ Social Membership - Register
                             Social Membership - Register
                         </h2>
                         <p class="mt-4 text-lg text-gray-500 sm:mt-3">
-                            We’d love to hear from you! Send us a message using the form opposite, or email us. We’d
-                            love to hear from you! Send us a message using the form opposite, or email us.
+                            We'd love to have you join our community! Please fill out the form below to register.
                         </p>
 
                         <form action="" method="POST" class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
                             {% csrf_token %}
-                            
-                           
+                             
                             <div>
                                 <label for="email" class="block text-sm font-medium text-gray-700">Enter Email</label>
                                 <div class="mt-1">
@@ -74,8 +72,8 @@ Social Membership - Register
                             
                             <div class="text-right sm:col-span-2">
                                 <button type="submit"
-                                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-grape-600 hover:bg-grape-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-grape-500">
-                                    Submit
+                                    class="inline-flex justify-center py-2 px-4 shadow-lg text-lg bg-orange-800 text-white rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-grape-500">
+                                    Sign Up
                                 </button>
                             </div>
                         </form>
