--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -17,18 +17,24 @@
           </div>
         </div>
         <div class="hidden space-x-10 lg:flex lg:ml-10">
+          {% if user.is_authenticated %}
+
+          <a href="{% url 'accounts:dashboard' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Dashboard</a>
+
+          <a href="{% url 'accounts:profile' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Profile</a>
+
+          <a href="{% url 'accounts:logout' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Log Out</a>
+
+          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Blog</a>
+
+          {% else %}
+
           <a href="{% url 'accounts:login' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Login</a>
 
           <a href="{% url 'accounts:register' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Register</a>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Profile</a>
-
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Blog</a>
-        </div>
-        <div class="hidden lg:flex lg:items-center lg:space-x-6">
-          <a href="#" class="py-2 px-6 bg-white border border-transparent rounded-md shadow-md text-base font-medium text-grape-600 hover:bg-gray-50">
-            Contact
-          </a>
+          <a href="{% url 'home' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Home</a>
+          {% endif %}
         </div>
       </nav>
     </div>
