--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -7,13 +7,22 @@
 {% block content %}
     <div class="relative bg-gray-50">
   <main class="lg:relative">
-    <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-48 lg:text-left">
-      <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
+    <div class="mx-auto max-w-7xl w-full text-center lg:py-16 lg:text-left">
+      <div class="lg:w-1/2">
         <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
-          <span class="block xl:inline">Dashboard-</span>
-          <span class="block text-indigo-600 xl:inline">Membership</span>
+          <span class="block xl:inline">Dashboard</span>
         </h1>
       </div>
+        <div class="grid grid-cols-3 my-3 gap-4">
+            {% for group in groups %}
+            <div class="bg-gray-100 p-4">
+                <h2 class="text-2xl font-bold">{{ group.name }}</h2>
+                <p class="text-gray-600 mb-3">{{ group.description }}</p>
+
+                <a href="{% url 'accounts:group-detail' group.pk %}" class="bg-orange-800 my-2 text-white px-3 py-2 rounded-md">View Group</a>
+            </div>
+            {% endfor %}
+        </div>
     </div>
   </main>
 </div>
