feat: added message

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -5,8 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <div class="relative bg-gray-50">
+<div class="relative bg-gray-50">
   <main class="lg:relative">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="bg-red-100 text-center border px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+            </div>
+        {% endfor %}
+    {% endif %}
     <div class="mx-auto max-w-7xl w-full text-center lg:py-16 lg:text-left">
       <div class="lg:w-1/2">
         <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
