--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,6 +1,6 @@
 <header class="relative z-10">
-    <div class="bg-gray-50">
-      <nav class="relative max-w-7xl mx-auto flex items-center justify-between pt-8 px-6 xl:px-8" aria-label="Global">
+    <div class="bg-gray-100">
+      <nav class="relative max-w-7xl mx-auto flex items-center justify-between py-4 px-6" aria-label="Global">
         <div class="flex items-center justify-between w-full lg:w-auto">
           <a href="#">
             <span class="sr-only">Workflow</span>
@@ -19,13 +19,13 @@
         <div class="hidden space-x-10 lg:flex lg:ml-10">
           {% if user.is_authenticated %}
 
+          <span class="text-lg text-orange-800">Welcome, {{ user.username }}</span>
+
           <a href="{% url 'accounts:dashboard' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Dashboard</a>
 
           <a href="{% url 'accounts:profile' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Profile</a>
 
           <a href="{% url 'accounts:logout' %}" class="text-base font-medium text-gray-500 hover:text-gray-600">Log Out</a>
-
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-600">Blog</a>
 
           {% else %}
 
@@ -73,7 +73,6 @@
 
             <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">About</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">Blog</a>
           </div>
           <div class="mt-6 px-5">
             <a href="#" class="block text-center w-full py-2 px-4 border border-transparent rounded-md shadow bg-grape-500 text-white font-medium hover:bg-grape-600">Contact</a>
