feat: added form for group

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -16,9 +16,10 @@
     {% endif %}
     <div class="mx-auto max-w-7xl w-full text-center lg:py-16 lg:text-left">
       <div class="lg:w-1/2">
-        <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
+        <h1 class="text-4xl my-3 tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
           <span class="block xl:inline">Dashboard</span>
         </h1>
+        <a href="{% url 'accounts:create-group' %}" class="bg-orange-800 my-2 text-white px-3 py-2 rounded-md">Create Group</a>
       </div>
         <div class="grid grid-cols-3 my-3 gap-4">
             {% for group in groups %}
