feat: added form type enc in register form

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -33,7 +33,7 @@ Social Membership - Register
                             We'd love to have you join our community! Please fill out the form below to register.
                         </p>
 
-                        <form action="" method="POST" class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
+                        <form action="" method="POST" enctype="multipart/form-data" class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
                             {% csrf_token %}
                              
                             <div>
