feat: added level to group members

--- a/templates/group/membership.html
+++ b/templates/group/membership.html
@@ -55,6 +55,13 @@ Social Membership - Membership
                                     </select>
                                 </div>
                             </div>
+
+                            <div>
+                                <label for="level" class="block text-sm font-medium text-gray-700">Member Level</label>
+                                <div class="mt-1">
+                                    <input type="text" name="level" class="block w-full py-3 px-2 shadow-sm sm:text-sm focus:ring-grape-500 focus:border-grape-500 border-gray-300 rounded-md" placeholder="Enter Level" />
+                                </div>
+                            </div>
                             
                             <div class="text-right sm:col-span-2">
                                 <button type="submit"
