--- a/templates/group/group_detail.html
+++ b/templates/group/group_detail.html
@@ -25,7 +25,7 @@ Social Membership - Group Detail
                 </div>
                 {% for member in members %}
                 <div class="bg-gray-100 p-4">
-                    <p>{{ member }}</p>
+                    <p class="bg-pink-400">{{ member }}</p>
                     <span>{{ member }}</span>
                 </div>
                 {% endfor %}
@@ -37,7 +37,7 @@ Social Membership - Group Detail
             {% endif %}
 
             {% if messages|length > 0 %}
-                <div class="bg-gray-100 p-4 my-2 text-center">
+                <div class="bg-gray-100 p-4 my-2">
                     <h2 class="text-2xl font-bold">Messages</h2>
                 </div>
                 {% for message in messages %}
