--- a/templates/levels/list_sell.html
+++ b/templates/levels/list_sell.html
@@ -5,7 +5,7 @@
     <script src="{% static 'js/message.js' %}"></script>
 {% endblock %}
 {% block title %}
-    Social Membership - Levels
+    Social Membership - Plot Sells
 {% endblock %}
 
 {% block content %}
@@ -21,17 +21,17 @@
     <div class="mx-auto max-w-7xl w-full text-center lg:py-16 lg:text-left">
       <div class="lg:w-1/2">
         <h1 class="text-4xl my-3 tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
-          <span class="block xl:inline">Level</span>
+          <span class="block xl:inline">Plot Sells</span>
         </h1>
-        <a href="{% url 'levels:create-level' %}" class="bg-orange-800 my-2 text-white px-3 py-2 rounded-md">Create Level</a>
+        <a href="{% url 'sells:create-sell' %}" class="bg-orange-800 my-2 text-white px-3 py-2 rounded-md">Create Sell</a>
       </div>
         <div class="grid grid-cols-3 my-3 gap-4">
-            {% for level in levels %}
+            {% for sell in sells %}
             <div class="bg-gray-100 p-4">
-                <h2 class="text-2xl font-bold">{{ level.lead }}</h2>
-                <p class="text-gray-600 mb-3">{{ level.subject }}</p>
+                <h2 class="text-2xl font-bold">{{ sell.amount }}</h2>
+                <p class="text-gray-600 mb-3">{{ sell.seller }}</p>
                 
-                <a href="{% url 'levels:level-update' level.pk %}" class="bg-orange-800 my-2 text-white px-3 py-2 ml-2 rounded-md">Update Level</a>
+                <a href="{% url 'sells:sell-update' sell.pk %}" class="bg-orange-800 my-2 text-white px-3 py-2 ml-2 rounded-md">Update Sell</a>
             </div>
             {% endfor %}
         </div>
