--- a/templates/levels/add_sell.html
+++ b/templates/levels/add_sell.html
@@ -27,10 +27,10 @@ Social Membership - Add Affiliate
                 <div class="lg:pr-8">
                     <div class="max-w-md mx-auto sm:max-w-lg lg:mx-0">
                         <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">
-                            Social Membership - Add Level 
+                            Social Membership - Add Plot Sell 
                         </h2>
                         <p class="mt-4 text-lg text-gray-500 sm:mt-3">
-                            Levels define affiliate marketing level
+                            Plot sell data to be added
                         </p>
 
                         <form action="" method="POST" enctype="multipart/form-data" class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
