--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -28,6 +28,7 @@
         <a href="{% url 'sells:create-sell' %}" class="bg-orange-800 my-2 text-white px-3 ml-2 py-2 rounded-md">Create Sell</a>
         <a href="{% url 'levels:create-level' %}" class="bg-orange-800 my-2 text-white px-3 ml-2 py-2 rounded-md">Create Level</a>
         <a href="{% url 'plots:create-plot' %}" class="bg-orange-800 my-2 text-white px-3 ml-2 py-2 rounded-md">Create Plot</a>
+        <a href="{% url 'plots:create-plot-image' %}" class="bg-orange-800 my-2 text-white px-3 ml-2 py-2 rounded-md">Create Plot Image</a>
       </div>
         <div class="grid grid-cols-3 my-3 gap-4">
             {% for group in groups %}
