--- a/templates/plots/list_plot_images.html
+++ b/templates/plots/list_plot_images.html
@@ -29,10 +29,11 @@
             {% for image in plot_images %}
             <div class="bg-gray-100 p-4">
                 <h2 class="text-2xl font-bold">{{ image.title }}</h2>
+                <h2 class="text-xl font-bold">{{ image.plot.location }}</h2>
+                <img src="{{ image.image.url }}" alt="{{ image.title }}" class="my-4 h-48 w-64">
             </div>
             {% endfor %}
         </div>
-        {{ plot_images }}
     </div>
   </main>
   <script src="{% static 'js/dashboard.js' %}"></script>
