--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -173,7 +173,7 @@
     </div>
     <div class="mt-12 border-t border-gray-700 pt-8">
       <p class="text-base text-gray-400 xl:text-center">
-        &copy; 2020 Workflow, Inc. All rights reserved.
+        &copy; 2024 Aryan Infra Real Estate, Inc. All rights reserved.
       </p>
     </div>
   </div>
