--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,10 +1,11 @@
+{% load static %}
 <header class="relative z-10">
     <div class="bg-gray-100">
       <nav class="relative max-w-7xl mx-auto flex items-center justify-between py-4 px-6" aria-label="Global">
         <div class="flex items-center justify-between w-full lg:w-auto">
           <a href="#">
-            <span class="sr-only">Workflow</span>
-            <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=purple&shade=600" alt="">
+            <span class="sr-only">Aryan Infra Real Estate</span>
+            <img class="h-8 w-auto sm:h-10" src="{% static 'images/logo.jpg' %}" alt="">
           </a>
           <div class="-mr-2 flex items-center lg:hidden">
             <button type="button" class="bg-gray-50 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-2 focus-ring-inset focus:ring-grape-500" aria-expanded="false">
