--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -38,7 +38,7 @@ Social Membership - Login
                             <div>
                                 <label for="email" class="block text-sm font-medium text-gray-700">Enter Email</label>
                                 <div class="mt-1">
-                                    <input type="email" name="email" id="first-name"
+                                    <input type="email" name="email" id="email"
                                         class="block w-full py-3 px-2 shadow-sm sm:text-sm focus:ring-grape-500 focus:border-grape-500 border-gray-300 rounded-md">
                                 </div>
                             </div>
