--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'js/main.js' %}"></script>
