--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <footer class="bg-gray-900" aria-labelledby="footer-heading">
   <h2 id="footer-heading" class="sr-only">Footer</h2>
   <div class="max-w-md mx-auto py-12 px-4 sm:max-w-lg sm:pt-16 sm:px-6 lg:max-w-7xl lg:pt-24 lg:pb-16 lg:px-8">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="space-y-8 xl:col-span-1">
-        <img class="h-10" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=gray&shade=400" alt="Company name">
+        <img class="h-10" src="{% static 'images/logo.jpg' %}" alt="Company name">
         <p class="text-gray-400 text-base">
           Making the world a better place through constructing elegant hierarchies.
         </p>
@@ -62,18 +64,6 @@
                   Analytics
                 </a>
               </li>
-
-              <li>
-                <a href="#" class="text-base text-gray-400 hover:text-gray-300">
-                  Commerce
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="text-base text-gray-400 hover:text-gray-300">
-                  Insights
-                </a>
-              </li>
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
@@ -124,24 +114,6 @@
                   Blog
                 </a>
               </li>
-
-              <li>
-                <a href="#" class="text-base text-gray-400 hover:text-gray-300">
-                  Jobs
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="text-base text-gray-400 hover:text-gray-300">
-                  Press
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="text-base text-gray-400 hover:text-gray-300">
-                  Partners
-                </a>
-              </li>
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
@@ -173,7 +145,7 @@
     </div>
     <div class="mt-12 border-t border-gray-700 pt-8">
       <p class="text-base text-gray-400 xl:text-center">
-        &copy; 2024 Aryan Infra Real Estate, Inc. All rights reserved.
+        &copy; 2025 Social Membership, Inc. All rights reserved.
       </p>
     </div>
   </div>
