--- a/templates/group/create_group.html
+++ b/templates/group/create_group.html
@@ -34,6 +34,13 @@ Social Membership - Create Group
                             Create a Group and collaborate
                         </p>
 
+                        {% if form.name.errors %}
+                            <ul class="errorlist text-red-600 bg-white p-2 shadow-md">
+                                {% for error in form.name.errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
 
                         <form action="" method="POST" class="mt-5">
                             {% csrf_token %}
