--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'partials/base.html' %}
 {% load static %}
+{% load group_tags %}
 {% block head %}
     
 <script src="{% static 'js/message.js' %}"></script>
@@ -38,7 +39,7 @@
           <div class="bg-gray-100 p-4">
               <h2 class="text-2xl font-bold">{{ group.name }}</h2>
               <p class="text-gray-600 mb-3">{{ group.description }}</p>
-
+              <p class="bg-red-500 my-2 text-white px-3 py-2 rounded-md w-1/2">{% get_group_action group %}</p>
               <a href="{% url 'accounts:group-detail' group.pk %}" class="bg-orange-800 my-2 text-white px-3 py-2 rounded-md">View Group</a>
           </div>
           {% endfor %}
