--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -145,7 +145,7 @@
     </div>
     <div class="mt-12 border-t border-gray-700 pt-8">
       <p class="text-base text-gray-400 xl:text-center">
-        &copy; 2025 Social Membership, Inc. All rights reserved.
+        &copy; {{ CURRENT_YEAR }} | Powered by {{ SITE_TITLE }}
       </p>
     </div>
   </div>
